--- a/220713_minfo.html
+++ b/220713_minfo.html
@@ -1,4 +1,26 @@
-        <p><h5>장르 :
+{% extends 'layouts/base.html' %}
+{% load static %}
+{% block title %}영화 소개 리스트{% endblock %}
+{% block style %} {% endblock %}
+
+{% block content %}
+<div id="main">
+<div class="container text-light">
+    <div class="mb-0"><h4>movies</h4></div>
+    <hr class="mb-1 mt-0">
+        <div class="d-flex justify-content-between">
+            <div><h3 class="fw-bold mt-3 me-2">{{ movie.title }}</h3></div>
+            <div><button class="btn text-white me-1 my-sm-0 input-group-addon" style="border: none" type="submit"><i class="bi bi-heart text-white fs-2 fw-bold"></i></button></div>
+        </div> <!-- 영화타이틀 -->
+    <hr class="mt-1 mb-4">
+    <div class="row">
+        <div class="col-4">
+               <img src="https://image.tmdb.org/t/p/w500/{{ movie.poster_path }}" alt="{{ movie.title }}_poster" class="card-img-top rounded">
+        </div> <!-- 포스터 -->
+        <div class="col-6">
+            <hr style="border: 0">
+            <p><h5><span class="text-warning fs-4">{{ star }}</span>({{ movie.vote_average }})</h5></p>
+            <p><h5>장르 :
         {% for g in gr %}
         {% if forloop.last %}
         {{ g.genre__name }}
@@ -6,3 +28,49 @@
         {{ g.genre__name }},
         {% endif %}
         {% endfor %}</h5></p>
+            <p><h5>개봉일 : {{ movie.release_date }}</h5></p>
+            <p><h5>줄거리</h5></p>
+            <p>{{ movie.overview}}</p>
+            <button type="button" class="btn btn-lg text-dark px-lg-5 fw-bold" style="background: #bbe309; border: #bbe309">♡찜하기</button>
+        </div> <!-- 영화정보 -->
+    </div>
+    <hr style="border: 0">
+    {% if movie.youtube_path == 'False' %}
+    {% else %}
+    <div class="row">
+        <h5>트레일러 보기</h5>
+        <div class="youtube mt-6 text-center">
+            <iframe width="100%" height="480px" src="https://www.youtube.com/embed/{{ movie.youtube_path }}" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div> <!-- 유투브 플레이어 -->
+    </div>
+    <hr class="my-3">
+    {% endif %}
+    <div class="row">
+        <p><h4>Reviews</h4></p>
+        {% if reviews %} <!-- 달린 리뷰가 있으면 5개까지(view에서 지정) 렌더링 -->
+        <h4 class="fw-bold mb-3">이 영화에 달린 리뷰</h4>
+        <ul class="mb-2">
+        {% for review in reviews %}
+        <li class="ms-2 me-2 d-inline">{{ review.title }}</li><a class="btn btn-warning btn-sm" href="{% url 'community:review' review.pk %}">자세히 보기</a>
+        <hr class="my-2">
+        {% endfor %}
+        </ul>
+        {% endif %}
+    </div> <!-- 리뷰넣기 -->
+    <hr class="my-3">
+    <div class="mb-5 text-center">
+        <button type="button" class="btn px-4 fw-bold" style="background: #bbe309; border: #bbe309">뒤로가기</button>
+    </div> <!-- 뒤로가기 -->
+</div>  <!-- container -->
+</div>  <!-- main -->
+{% endblock %}
+
+{% block script %}
+<script>
+    window.onload = function (){
+        document.querySelector("#heart").onclick = function (){
+            hc.submit();
+        }
+    }
+</script>
+{% endblock %}
